--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <h1>Heading</h1>
-    <p>Paragraph</p>
+    <p class="sub-heading-color">Paragraph</p>
 
 
     <!-- Bootstrap JS Script -->
