--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
   <!-- Classes on body set to work with mt-auto on footer to ensure it always stays at the bottom of the page -->
   <body class="d-flex flex-column min-vh-100">
+    
     <!-- Navigation -->
     <!-- data-bs-theme ensures font colour contrasts dark navbar background color -->
     <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
@@ -75,13 +76,13 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
+              <a class="nav-link" href="index.html#services">Services</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="game-library.html">Games</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="index.html#contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -296,7 +297,7 @@
               <i class="fa-solid fa-phone"></i> 012 345 6789<br />
               <i class="fa-regular fa-paper-plane"></i> info@boardwalk-games.co
             </p>
-            <div class="social-links mt-4">
+            <div class="social-links my-4">
               <a href="https://instagram.com" target="_blank" aria-label="Visit our Instagram page (opens in a new tab)" rel="noopener">
                 <i class="fa-brands fa-instagram"></i></a>
               <a href="https://facebook.com" target="_blank" aria-label="Visit our Facebook page (opens in a new tab)" rel="noopener">
@@ -309,7 +310,7 @@
           <div class="col-12 col-md-6 col-xl-4">
             <h3 class="sub-heading-color">Opening times</h3>
             <!-- Table -->
-            <table class="table">
+            <table class="table table-dark">
               <thead>
                 <tr>
                   <th scope="col">Day</th>
