--- a/game-library.html
+++ b/game-library.html
@@ -71,7 +71,7 @@
           <!-- Ms-auto class used to ensure auto margin on the left, pushing links to the right -->
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a class="nav-link" href="index.html"
                 >Home</a
               >
             </li>
@@ -79,11 +79,14 @@
               <a class="nav-link" href="index.html#services">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="game-library.html">Games</a>
+              <a class="nav-link active" href="game-library.html" aria-current="page">Games</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="index.html#contact">Contact</a>
             </li>
+            <li class="nav-item">
+              <a href="booking.html" class="btn btn-primary ms-lg-3">Book now</a>
+          </li>
           </ul>
         </div>
       </div>
