--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <!-- Classes on body set to work with mt-auto on footer to ensure it always stays at the bottom of the page -->
   <body class="d-flex flex-column min-vh-100">
-    
+
     <!-- Navigation -->
     <!-- data-bs-theme ensures font colour contrasts dark navbar background color -->
     <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
@@ -84,6 +84,9 @@
             <li class="nav-item">
               <a class="nav-link" href="index.html#contact">Contact</a>
             </li>
+            <li class="nav-item">
+              <a href="booking.html" class="btn btn-primary ms-lg-3">Book now</a>
+          </li>
           </ul>
         </div>
       </div>
@@ -104,6 +107,7 @@
             ready for your next challenge, or a student gamer looking for a fun,
             affordable hangout, we've got you covered.
           </p>
+          <a href="booking.html" class="btn btn-primary mb-4">Book now</a>
         </div>
 
         <div class="col-12 col-xl-6">
