--- a/booking.html
+++ b/booking.html
@@ -33,8 +33,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous"/>
 
     <!-- Custom CSS Stylesheet-->
     <link rel="stylesheet" href="assets/css/style.css" />
@@ -109,7 +108,7 @@
         <div class="row justify-content-center">
             <div class="col-12 col-md-8">
                 <h2>Booking inquiry</h2>
-                <form>
+                <form action="success.html" method="GET">
                     <div class="row">
                         <div class="col-12 col-lg-6 mb-3">
                             <label for="name" class="form-label">Name</label>
@@ -222,8 +221,8 @@
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous">
+    </script>
 
     <!-- Font Awesome Kit -->
     <script
