--- a/game-library.html
+++ b/game-library.html
@@ -79,6 +79,9 @@
               <a class="nav-link" href="index.html#services">Services</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="index.html#events">Events</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link active" href="game-library.html" aria-current="page">Games</a>
             </li>
             <li class="nav-item">
