Add and style Game Booking section

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <a class="nav-link" href="index.html#contact">Contact</a>
             </li>
             <li class="nav-item">
-              <a href="booking.html" class="btn custom-button-filled ms-3">Book now</a>
+              <a id="nav-button" href="booking.html" class="btn custom-button-filled ms-3">Book now</a>
           </li>
           </ul>
         </div>
@@ -284,8 +284,8 @@
       <!-- Events section -->
       <section id="events" class="container section">
         <div class="row">
-          <div class="col-12 text-center">
-            <h2 class="display-6">Join Our Events</h2>
+          <div class="col-12">
+            <h2 class="display-6 text-center">Join Our Events</h2>
           </div>
           <div class="col-12 col-xl-6">
             <p>
