--- a/game-library.html
+++ b/game-library.html
@@ -344,6 +344,62 @@
           </div>
         </div>
       </section>
+
+      <!-- Reserve a game section -->
+      <section id="reserve-game" class="container section mb-5">
+        <div class="row justify-content-center">
+          <div class="col-12 col-md-8">
+            <h2 class="display-6 text-center">Reserve A Game</h2>
+          </div>
+          <div class="col-12 col-md-8 ">
+            <p>
+              Reserve a board game for your next visit to Boardwalk Games. Pick your challenge, and let the adventure begin! Fill out 
+              your details and preferred game below, and we'll have it set aside for you when you arrive.
+            </p>
+          </div>
+
+          <!-- Reserve game form -->
+          <div class="col-12 col-md-8">
+            <form action="success.html" method="GET">
+              <div class="row">
+                  <div class="col-12 col-xl-4 mb-3">
+                      <label for="name" class="form-label"> Full name</label>
+                      <input class="form-control" id="name" name="name" type="text" required>
+                  </div>
+                  <div class="col-12 col-xl-4 mb-3">
+                      <label for="phone" class="form-label">Phone number</label>
+                      <input class="form-control" id="phone" name="phone" type="number" required>
+                  </div>
+                  <div class="col-12 col-xl-4 mb-3">
+                      <label for="email" class="form-label">Email address</label>
+                      <input class="form-control" id="email" name="email" type="email" required>
+                  </div>
+                  <div class="col-12 col-xl-8 mb-3">
+                      <label for="game-type" class="form-label">Select game</label>
+                      <select id="game-type" class="form-select" name="game-type" required>
+                          <option value="" selected>Select game</option>
+                          <option value="galaxy-pioneers">Galaxy Pioneers</option>
+                          <option value="mystic-woods">Mystic Woods</option>
+                          <option value="captains-gambit">Captain's Gambit</option>
+                          <option value="critter-quest">Critter Quest</option>
+                          <option value="setters-of-catan">Setters of Catan</option>
+                          <option value="monopoly">Monopoly</option>
+                          <option value="exploding-kittens">Exploding Kittens</option>
+                          <option value="cluedo">Cluedo</option>
+                      </select>
+                  </div>
+                  <div class="col-12 col-xl-4 mb-4">
+                    <label for="date" class="form-label">Requested date</label>
+                    <input class="form-control" id="date" name="date" type="date" required>
+                  </div>
+                </div>
+                <div class="d-flex justify-content-end">
+                  <button type="submit" class="btn custom-button-outline mt-3">Submit</button>
+                </div>
+            </form>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- Footer / contact section -->
