--- a/booking.html
+++ b/booking.html
@@ -39,7 +39,7 @@
   <body class="d-flex flex-column min-vh-100">
     <!-- Navigation -->
     <!-- data-bs-theme ensures font colour contrasts dark navbar background color -->
-    <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
+    <nav id="navbar" class="navbar navbar-expand-lg fixed-top" data-bs-theme="dark">
       <!-- Container (not fluid) class used to ensure container margin consistent with grid -->
       <div class="container">
         <a class="navbar-brand" href="index.html">
@@ -78,10 +78,11 @@
             </li>
             <li class="nav-item">
               <a
+                id="nav-button"
                 href="booking.html"
-                class="btn custom-button-filled ms-3"
-                aria-current="page"
-                >Book now</a>
+                class="btn custom-button-filled ms-3">
+                Book now
+              </a>
             </li>
           </ul>
         </div>
