--- a/game-library.html
+++ b/game-library.html
@@ -40,7 +40,7 @@
   <body class="d-flex flex-column min-vh-100">
     <!-- Navigation -->
     <!-- data-bs-theme ensures font colour contrasts dark navbar background color -->
-    <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
+    <nav id="navbar" class="navbar navbar-expand-lg fixed-top" data-bs-theme="dark">
       <!-- Container (not fluid) class used to ensure container margin consistent with grid -->
       <div class="container">
         <a class="navbar-brand" href="index.html">
@@ -63,7 +63,8 @@
           <!-- Ms-auto class used to ensure auto margin on the left, pushing links to the right -->
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link"  href="index.html"
+                >Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="index.html#services">Services</a>
@@ -72,18 +73,18 @@
               <a class="nav-link" href="index.html#events">Events</a>
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                href="game-library.html"
-                aria-current="page"
-                >Games</a>
+              <a class="nav-link active" aria-current="page" href="game-library.html">Games</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="index.html#contact">Contact</a>
             </li>
             <li class="nav-item">
-              <a href="booking.html" class="btn custom-button-filled ms-3"
-                >Book now</a>
+              <a
+                id="nav-button"
+                href="booking.html"
+                class="btn custom-button-filled ms-3">
+                Book now
+              </a>
             </li>
           </ul>
         </div>
@@ -108,7 +109,7 @@
 
         <div class="col-12 col-xl-6">
           <!-- Carousel -->
-          <div id="carousel" class="carousel slide" data-bs-ride="carousel">
+          <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img
@@ -138,7 +139,7 @@
             <button
               class="carousel-control-prev"
               type="button"
-              data-bs-target="#carouselExample"
+              data-bs-target="#carouselExampleAutoplaying"
               data-bs-slide="prev">
               <span
                 class="carousel-control-prev-icon"
@@ -148,7 +149,7 @@
             <button
               class="carousel-control-next"
               type="button"
-              data-bs-target="#carouselExample"
+              data-bs-target="#carouselExampleAutoplaying"
               data-bs-slide="next">
               <span
                 class="carousel-control-next-icon"
