--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <body class="d-flex flex-column min-vh-100">
     <!-- Navigation -->
     <!-- data-bs-theme ensures font colour contrasts dark navbar background color -->
-    <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
+    <nav id="navbar" class="navbar navbar-expand-lg fixed-top" data-bs-theme="dark">
       <!-- Container (not fluid) class used to ensure container margin consistent with grid -->
       <div class="container">
         <a class="navbar-brand" href="index.html">
@@ -112,7 +112,7 @@
 
         <div class="col-12 col-xl-6">
           <!-- Carousel -->
-          <div id="carousel" class="carousel slide" data-bs-ride="carousel">
+          <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img
@@ -151,24 +151,12 @@
                   alt="Students playing a card game at Boardwalk Games" />
               </div>
             </div>
-            <button
-              class="carousel-control-prev"
-              type="button"
-              data-bs-target="#carouselExampleAutoplaying"
-              data-bs-slide="prev">
-              <span
-                class="carousel-control-prev-icon"
-                aria-hidden="true"></span>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Previous</span>
             </button>
-            <button
-              class="carousel-control-next"
-              type="button"
-              data-bs-target="#carouselExampleAutoplaying"
-              data-bs-slide="next">
-              <span
-                class="carousel-control-next-icon"
-                aria-hidden="true"></span>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
           </div>
