--- a/success.html
+++ b/success.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,40 +28,57 @@
     ensure it always stays at the bottom of the page -->
 
 <body class="d-flex flex-column min-vh-100">
-  <!-- Navigation -->
-  <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
-    <div class="container">
-      <a class="navbar-brand" href="index.html">
-        <img class="logo" src="assets/images/logo-sm-white.png" alt="Boardwalk Games Logo">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="index.html#services">Services</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="index.html#events">Events</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="game-library.html">Games</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="index.html#contact">Contact</a>
-          </li>
-          <li class="nav-item">
-            <a class="btn custom-button-filled ms-3" href="booking.html">Book now</a>
-          </li>
-        </ul>
+    <!-- Navigation -->
+    <!-- data-bs-theme ensures font colour contrasts dark navbar background color -->
+    <nav id="navbar" class="navbar navbar-expand-lg fixed-top" data-bs-theme="dark">
+      <!-- Container (not fluid) class used to ensure container margin consistent with grid -->
+      <div class="container">
+        <a class="navbar-brand" href="index.html">
+          <img
+            src="assets/images/logo-sm-white.png"
+            alt="Boardwalk Games logo"
+            class="logo" />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <!-- Ms-auto class used to ensure auto margin on the left, pushing links to the right -->
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html#services">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html#events">Events</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="game-library.html">Games</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html#contact">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a
+                id="nav-button"
+                href="booking.html"
+                class="btn custom-button-filled ms-3">
+                Book now
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
 
   <!-- success message for users who successfully submit a form -->
   <main id="success" class="container section text-center">
