--- a/game-library.html
+++ b/game-library.html
@@ -82,7 +82,7 @@
               <a
                 id="nav-button"
                 href="booking.html"
-                class="btn custom-button-filled ms-3">
+                class="btn custom-button-filled ms-lg-3">
                 Book now
               </a>
             </li>
