--- a/game-library.html
+++ b/game-library.html
@@ -39,9 +39,10 @@
   <!-- Classes on body set to work with mt-auto on footer to ensure it always stays at the bottom of the page -->
   <body class="d-flex flex-column min-vh-100">
     <!-- Navigation -->
-    <!-- data-bs-theme ensures font colour contrasts dark navbar background color -->
-    <nav id="navbar" class="navbar navbar-expand-lg fixed-top" data-bs-theme="dark">
-      <!-- Container (not fluid) class used to ensure container margin consistent with grid -->
+    <nav
+      id="navbar"
+      class="navbar navbar-expand-lg fixed-top"
+      data-bs-theme="dark">
       <div class="container">
         <a class="navbar-brand" href="index.html">
           <img
@@ -60,31 +61,25 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <!-- Ms-auto class used to ensure auto margin on the left, pushing links to the right -->
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link"  href="index.html"
-                >Home</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html#services">Services</a>
+              <a class="nav-link" href="#services">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html#events">Events</a>
+              <a href="#events" class="nav-link">Events</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="game-library.html">Games</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html#contact">Contact</a>
+              <a class="nav-link" href="#contact">Contact</a>
             </li>
             <li class="nav-item">
-              <a
-                id="nav-button"
-                href="booking.html"
-                class="btn custom-button-filled ms-lg-3">
-                Book now
-              </a>
+              <a href="booking.html" class="btn custom-button-filled ms-lg-3"
+                >Book now</a>
             </li>
           </ul>
         </div>
