--- a/success.html
+++ b/success.html
@@ -18,7 +18,7 @@
   href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
   rel="stylesheet"
   integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-  crossorigin="anonymous"/>
+  crossorigin="anonymous">
 
   <!-- custom css -->
   <link rel="stylesheet" href="assets/css/style.css">
@@ -28,6 +28,7 @@
     ensure it always stays at the bottom of the page -->
 
 <body class="d-flex flex-column min-vh-100">
+    <!-- data-bs-theme ensures font colour contrasts dark navbar background color -->
     <!-- Navigation -->
     <nav
       id="navbar"
@@ -38,7 +39,7 @@
           <img
             src="assets/images/logo-sm-white.png"
             alt="Boardwalk Games logo"
-            class="logo" />
+            class="logo">
         </a>
         <button
           class="navbar-toggler"
@@ -151,7 +152,8 @@
           </table>
         </div>
       </div>
-</footer>
+    </div>
+  </footer>
 
 <!-- Font Awesome Kit -->
 <script
