--- a/booking.html
+++ b/booking.html
@@ -161,7 +161,7 @@
                 </div>
               </div>
 
-              <button type="submit" class="btn custom-button-outline">
+              <button type="submit" class="btn custom-button-outline mb-4">
                 Submit
               </button>
             </form>
